Fix ToggleButton content alignment

--- a/packages/components/app/styles/components/dropdown.scss
+++ b/packages/components/app/styles/components/dropdown.scss
@@ -112,16 +112,17 @@ $hds-dropdown-toggle-border-radius: $hds-button-border-radius;
 }
 
 .hds-dropdown-toggle-button--width-full {
+  justify-content: space-between;
   width: 100%;
   max-width: 100%;
+}
 
-  .hds-dropdown-toggle-button__text {
-    flex: 1 0 auto;
-    text-align: left;
-  }
+.hds-dropdown-toggle-button__text {
+  text-align: left;
 }
 
 .hds-dropdown-toggle-button__icon {
+  flex: none;
   margin-right: 0.375rem;
 }
 
@@ -133,7 +134,8 @@ $hds-dropdown-toggle-border-radius: $hds-button-border-radius;
 // TOGGLE / CHEVRON
 
 .hds-dropdown-toggle-chevron {
-  margin-left: 8px;
+  margin-left: auto;
+  padding-left: 8px;
 
   @media (prefers-reduced-motion: no-preference) {
     transition: transform 0.3s;
